--- a/Twitter Client/Twitter Client/Base.lproj/Main.storyboard
+++ b/Twitter Client/Twitter Client/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="bas-ss-X87">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="zMA-Ol-NDQ">
+                        <barButtonItem key="leftBarButtonItem" id="zMA-Ol-NDQ">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="DNX-FJ-3Qq">
                                 <rect key="frame" x="20" y="7" width="48" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
