--- a/Twitter Client/Twitter Client/Base.lproj/Main.storyboard
+++ b/Twitter Client/Twitter Client/Base.lproj/Main.storyboard
@@ -23,13 +23,19 @@
                     <navigationItem key="navigationItem" id="bas-ss-X87">
                         <barButtonItem key="leftBarButtonItem" style="done" id="fbP-bq-xMl">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="cjh-8e-fkj">
-                                <rect key="frame" x="20" y="11" width="33" height="22"/>
+                                <rect key="frame" x="20" y="11" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="settingsIcon"/>
+                                <state key="normal" image="whiteSettingsIcon"/>
                                 <connections>
-                                    <segue destination="yZD-ns-43V" kind="show" id="v8k-L9-WkH"/>
+                                    <segue destination="yZD-ns-43V" kind="show" identifier="SettingsViewSegue" id="v8k-L9-WkH"/>
                                 </connections>
                             </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="7Jy-lL-b9F">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="composeButtonTapped" destination="Y8q-V7-yL4" id="3X7-k6-uy9"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
@@ -123,6 +129,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fxZ-tY-Z8H">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -135,6 +145,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="settingsIcon" width="21" height="21"/>
+        <image name="whiteSettingsIcon" width="115" height="116"/>
     </resources>
 </document>
